CMMP/test/SemanticError/07_Unused.c
void main() {
    int64_t a = 2;
    int64_t b = 2, c;
    b = b + a;
}
